--- a/Estagiado/Estagiado.csproj
+++ b/Estagiado/Estagiado.csproj
@@ -51,23 +51,30 @@
     <Compile Include="Conexao\ConnectionFactory.cs" />
     <Compile Include="DAO\EmpresaDAO.cs" />
     <Compile Include="DAO\EstudantesDAO.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormInicio.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormInicio.Designer.cs">
+      <DependentUpon>FormInicio.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\EmpresaModel.cs" />
     <Compile Include="Models\EstudanteModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\FormEmpresa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FormEmpresa.Designer.cs">
+      <DependentUpon>FormEmpresa.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FormEstudante.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\FormEstudante.Designer.cs">
       <DependentUpon>FormEstudante.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormInicio.resx">
+      <DependentUpon>FormInicio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -78,6 +85,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\FormEmpresa.resx">
+      <DependentUpon>FormEmpresa.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\FormEstudante.resx">
       <DependentUpon>FormEstudante.cs</DependentUpon>
     </EmbeddedResource>
