--- a/Estagiado/Estagiado.csproj
+++ b/Estagiado/Estagiado.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Models\EstudanteModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\FormCidade.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FormCidade.Designer.cs">
+      <DependentUpon>FormCidade.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FormEmpresa.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +91,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\FormCidade.resx">
+      <DependentUpon>FormCidade.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\FormEmpresa.resx">
       <DependentUpon>FormEmpresa.cs</DependentUpon>
     </EmbeddedResource>
