Refatory da aplicação

--- a/Estagiado/App.config
+++ b/Estagiado/App.config
@@ -5,6 +5,9 @@
     </startup>
 
     <connectionStrings>
-      <add name="estagiado" connectionString="server=localhost; user ID=root; password=; database=estagiado_db" providerName="MySql.Data.MySqlClient;"/>
+      <add name="estagiado" connectionString="server=localhost; user ID=developer; password=1234567; database=estagiado_db" providerName="MySql.Data.MySqlClient;"/>
     </connectionStrings>
 </configuration>
+
+
+
